# hintents

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  CHECKLIST.md  CI_FAILURE_ANALYSIS.md  CI_FIX_REQUIRED.md  CLI_REFACTOR_ISSUE_101.md  CONTRIBUTING.md  DELIVERY_COMPLETE.md  FEATURE_ERROR_SUGGESTIONS.md  FLAMEGRAPH_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ISSUE_74.md  IMPLEMENTATION_SUMMARY.md  MOCK_SERVER_GUIDE.md  Makefile  PR_INSTRUCTIONS.md  PR_SUBMISSION_GUIDE.md  README.md  SECURITY_REMEDIATION_PR463.md  TEST_OUTPUT_EXAMPLE.md  create_phase9.py  erst.example.toml  fix_ci.sh  fix_licenses.sh  go.mod  go.sum  main.go  package-lock.json  package.json  verify_hashing.go  verify_implementation.sh
.github/workflows/: ci.yml  fuzz.yml  publish.yml  release.yml  strict-lint.yml
cmd/erst/: main.go
cmd/generate-xdr-snapshot/: main.go
docs/: ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  HSM_SIGNING_LOAD_TEST.md  QUICK_START_SUGGESTIONS.md  STRICT_LINTING.md  SUGGESTION_ENGINE_FLOW.md  architecture.md  pkcs11-yubikey.md
docs/schema/: FINAL_CHECKPOINT_REPORT.md  VALIDATION_REPORT.md  validate-schemas.js
erst_extension/src/: traceExport.test.ts  traceExport.ts
integration/: context_helper_test.go  integration_test.go
internal/authtrace/: custom_auth.go  reporter.go  tracker.go  tracker_test.go  types.go
internal/cache/: cache.go  config.go
internal/cmd/: abi.go  audit.go  auth_debug.go  compare.go  completion.go  daemon.go  debug.go  debug_test.go  doctor.go  dry_run.go  explain.go  export.go  fuzz.go  generate_test.go  init.go  report.go  root.go  rpc.go  sandbox.go  session.go  shell.go  trace.go  upgrade.go  version.go  xdr.go
internal/compare/: engine.go  engine_test.go  render.go
internal/config/: config.go  config_test.go  networks.go  parse.go  validate.go  validate_test.go  validators.go
internal/daemon/: server.go  (+1 more)
scripts/: check-license-headers.sh  lint-strict.sh  test-ci-locally.sh  test-strict-linting.sh  validate-ci.sh  verify_flamegraph.sh
simulator/: Cargo.toml  clippy.toml
simulator/examples/: hsm_integration.rs
simulator/src/: git_detector.rs  lib.rs  main.rs  runner.rs  source_map_cache.rs  source_mapper.rs  stack_trace.rs  test.rs  types.rs  wasm.rs  wasm_types.rs
simulator/src/cli/: mod.rs  trace_viewer.rs
simulator/src/config/: mod.rs  paths.rs
simulator/src/ipc/: mod.rs  validate.rs
simulator/src/snapshot/: mod.rs
simulator/src/theme/: ansi.rs  loader.rs  mod.rs  theme.rs
simulator/tests/: hsm_integration_tests.rs  signature_verification_mock_test.rs  source_map_integration_test.rs
src/: index.ts
test/: audit_load_test.ts  generate_sample_trace.go
tests/: audit.test.ts  factory.test.ts  logger.test.go  pkcs11Signer.test.ts  signer-factory.test.ts
(+111 files in other folders)
