[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "simulator"
path = "src/lib.rs"

[[bin]]
name = "erst-sim"
path = "src/main.rs"

[dependencies]
soroban-env-host = "25.0.1" # Updated to latest version
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
inferno = "0.11"
jsonschema = "0.40.2"
object = { version = "0.38.1", features = ["wasm"] }

[dev-dependencies]
gimli = { version = "0.31", features = ["read", "write"] }
