[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "simulator"
path = "src/lib.rs"

[[bin]]
name = "erst-sim"
path = "src/main.rs"

[lints.rust]
unused_variables = "deny"
unused_imports = "deny"
unused_mut = "deny"
dead_code = "deny"
unused_assignments = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"

[dependencies]
# soroban-env-host major version == Soroban protocol version.
# Protocol 21 (v21.x) introduced DiagnosticLevel, get_events(), and the
# HostedContractEvent.failed_call field that this simulator relies on.
# We accept any release in the 21-25 range so the binary stays compatible
# with both mainnet protocol 21 and subsequent minor protocol bumps.
soroban-env-host = { version = ">=21.0, <26" } # Updated to latest version
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
inferno = "0.11"
jsonschema = "0.40.2"
object = { version = "0.38.1", features = ["wasm"] }
wasmparser = "0.208"
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
dirs = "5.0"
thiserror = "1.0"
gimli = { version = "0.31", features = ["read", "write"] }

[dev-dependencies]
tempfile = "3"
wat = "1.0"
addr2line = "0.21"
